Last-minute changes before connectathon
