# toop-connector/src/main/java/no/brreg/toop/controller/QueryApiImpl.java
@@ -1,6 +1,8 @@
 package no.brreg.toop.controller;
 
+import no.brreg.toop.BrregIncomingHandler;
 import no.brreg.toop.CountryCodeCache;
+import no.brreg.toop.generated.model.Enhet;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,8 +13,8 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.TimeoutException;
 
 
 @Controller
@@ -22,6 +24,9 @@ public class QueryApiImpl implements no.brreg.toop.generated.api.QueryApi {
 
     @Autowired
     private CountryCodeCache countryCodeCache;
+
+    @Autowired
+    private BrregIncomingHandler brregIncomingHandler;
 
 
     @Override
@@ -40,15 +45,19 @@ public class QueryApiImpl implements no.brreg.toop.generated.api.QueryApi {
     }
 
     @Override
-    public ResponseEntity<List<String>> getOrgno(HttpServletRequest httpServletRequest, HttpServletResponse response, String countrycode, String orgno) {
+    public ResponseEntity<Enhet> getOrganization(HttpServletRequest httpServletRequest, HttpServletResponse response, String countrycode, String orgno) {
         try {
-            if (true) {
-                return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+            final Enhet enhet = brregIncomingHandler.getOrganization(countrycode, orgno);
+            if (enhet == null) {
+                return new ResponseEntity<>(HttpStatus.NOT_FOUND);
             } else {
-                return new ResponseEntity<>(Collections.singletonList("toop"), HttpStatus.OK);
+                return new ResponseEntity<>(enhet, HttpStatus.OK);
             }
+        } catch (TimeoutException e) {
+            LOGGER.error("getOrganization timed out while fetching "+countrycode+"/"+orgno);
+            return new ResponseEntity<>(HttpStatus.REQUEST_TIMEOUT);
         } catch (Exception e) {
-            LOGGER.error("getOrgno failed: ", e);
+            LOGGER.error("getOrganization failed: ", e);
             return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
